fixing mobile spacing

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -145,7 +145,7 @@
 
     #house-pick-container {
       #house-pick-title {
-        margin-bottom: 5px;
+        margin-bottom: 10px;
       }
     }
   }
